crates/mssql-client/tests/compile-fail/to_params_on_enum.rs
use mssql_derive::ToParams;

/// ToParams can only be derived for structs, not enums.
#[derive(ToParams)]
enum NotAStruct {
    A,
    B,
}

fn main() {}
