crates/mssql-client/tests/compile-fail/to_params_on_enum.stderr
error: ToParams can only be derived for structs
 --> tests/compile-fail/to_params_on_enum.rs:3:1
  |
3 | / /// ToParams can only be derived for structs, not enums.
4 | | #[derive(ToParams)]
5 | | enum NotAStruct {
6 | |     A,
7 | |     B,
8 | | }
  | |_^
